network-security-policies/default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-network
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
