network-security-policies/unrestricted.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-network
spec:
  podSelector:
    matchLabels:
      network: unrestricted
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - {}
